<resources>
    <string name="app_name">RaggingComplaint</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email2">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password" />
    <string name="already_registered_login_here">Already Registered ? Login Here</string>
    <string name="register">Register</string>
    <string name="roll_no">roll no</string>
    <string name="email">Email</string>
    <string name="full_name2">Full Name</string>
    <string name="create_new_account2">Create New Account</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="your_name">Your Name</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="verify_now">Verify Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="full_name">Full Name</string>

    <string name="phone">Phone</string>
    <string name="ragging_complaint_app">Ragging Complaint App</string>
    <string name="create_new_account">Create New Account</string>

    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_here_create_account">New Here ? Create Account</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="change_profile2">Change Profile</string>
    <string name="phone2">Phone</string>
    <string name="wemail">Email</string>
    <string name="wfull_name">Full Name</string>
    <string name="reset_passwordw">Reset Password</string>
    <string name="wverify_now">Verify Now</string>
    <string name="email_not_verfiedw">Email Not Verfied !</string>
    <string name="addmmission_number2">addmmission Number</string>
    <string name="your_email_address2">Your Email Address</string>
    <string name="your_name2">Your Name</string>
    <string name="logout2">Logout</string>
    <string name="addmission_number1">Addmission number</string>
    <string name="profile">Profile</string>
    <string name="new_complaint">New Complaint</string>
    <string name="home">HOME</string>
    <string name="drawer_header">Drawer Header</string>
    <string name="home1">home</string>
    <string name="profile1">Profile</string>
    <string name="change_profile_picture">change profile picture</string>
    <string name="verify_email">verify email</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="home_fragment">home fragment</string>
    <string name="button">Button</string>
    <string name="your_complaint_form_goes_here">your complaint form goes here</string>
    <string name="admin_login">Admin Login</string>
    <string name="click_here_for_admin_login">Click here for Admin Login</string>
    <string name="forgot_password2">Forgot Password ?</string>
    <string name="login2">Login</string>
    <string name="password2">Password</string>
    <string name="email5">Email</string>
    <string name="ragging_complaint_app2">Ragging Complaint App</string>
    <string name="admin_dashbard">Admin dashbard</string>
    <string name="home5">Home</string>
    <string name="complaints_are_viwed_here">complaints are viwed here</string>
    <string name="view_complaints">view complaints</string>
    <string name="add_complaint">Add Complaint</string>
    <string name="complaint_name">Complaint Name :</string>
    <string name="enter_your_complaint_name">Enter your Complaint name</string>
    <string name="location">Location :</string>
    <string name="location_of_incident">Location of incident</string>
    <string name="complaint">Complaint :</string>
    <string name="enter_your_complaint_here">Enter your complaint here</string>
    <string name="add_image_1">Add image 1</string>
    <string name="add_image_2">Add image 2</string>
    <string name="add_audio">Add audio</string>
    <string name="add_video">Add video</string>
    <string name="submit">Submit</string>
    <string name="uploaded_successfully">uploaded successfully</string>
    <string name="notuploadedd">upload failed!</string>
    <string name="enter_complaint_id_to_check_status">enter complaint id to check status</string>
    <string name="emergency_contacts">EMERGENCY CONTACTS : \n
    contact 1 : 1234567890 \n
    contact 2 : 0987654321 \n
    </string>

    <string name="new_complaint_status">new complaint status</string>
    <string name="old_status">old status</string>
    <string name="update_status">Update Status</string>
    <string name="update">Update</string>
    <string name="complaint_name2">Complaint name</string>
    <string name="complaint_description7">Complaint description</string>
    <string name="date_submitted">Date submitted</string>
    <string name="view_complaint_name">view complaint name</string>
    <string name="view_complaint_location">view complaint location</string>
    <string name="date_submitted2">Date submitted :</string>
    <string name="view_date">view date</string>
    <string name="complaint_status">Complaint Status :</string>
    <string name="view_complaint_description">view complaint description</string>
    <string name="view_old_status">view old status</string>
    <string name="enter_new_status">enter new status</string>
    <string name="change_complaint_status">Change complaint status</string>
    <string name="view_attachments_uploaded">view attachments uploaded</string>
    <string name="media_doownload_result">media doownload result...</string>
    <string name="textview">TextView</string>
    <string name="date5">Date :</string>
    <string name="downloadmedia">Click here to download uploaded attachments...</string>
    <string name="mediahasuploaded">Some attachments have been uploaded for this complaint!</string>
    <string name="mediahasnotuploaded">No attachments have been uploaded for this complaint!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="viewdownloadedmedia">Click here to view uploaded attachments...</string>
    <string name="send_alert_message">Send Alert Message</string>
    <string name="click_here_to_play_audio">Click here to play audio...</string>
    <string name="click_here_to_view_image1">Click here to view image1...</string>
    <string name="click_here_to_view_image2">Click here to view image2...</string>
    <string name="click_here_to_play_video">Click here to play video...</string>
    <string name="note_upload_image_less_than_1mb_audio_less_than_3mb_and_video_less_than_5_mb">Note : Upload image less than 1mb,audio less than 2mb and video less than 4mb.</string>
    <string name="imagesizeexceeded">Image size must be less than 1mb!</string>
    <string name="audiosizeexceeded">audio size must be less than 2mb!</string>
    <string name="videosizeerror">Video size must be less than 4mb!</string>
    <string name="click_here_to_change_complaint_status">Click here to change complaint status...</string>
    <string name="ragging_complaint_android_app">RAGGING COMPLAINT</string>
    <string name="android_application">ANDROID APPLICATION</string>
    <string name="your_phone_no">Your Phone no</string>
    <string name="enter_date">enter date</string>
    <string name="ragging_complaint">Ragging Complaint</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="next">NEXT</string>
    <string name="sending_otp">Sending OTP..</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend">Resend</string>
    <string name="checking">Checking..</string>
    <string name="fwf">Verify</string>
    <string name="save">Save</string>
    <string name="email_address33">Email Address</string>
    <string name="logging">Logging in</string>
</resources>