<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewcomplaintfragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C3AA5"
    app:layout_scrollFlags="scroll">

    <TextView
        android:id="@+id/viewaudio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/click_here_to_play_audio"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/viewvideo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewimage2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/location"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/viewcomploc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/complaint_name"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/viewcompname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewcompname"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:text="@string/view_complaint_name"
        android:textColor="#D4E157"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewcomploc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_complaint_location"
        android:textColor="#D4E157"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView5"
        app:layout_constraintStart_toStartOf="@+id/viewcompname" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/date5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toStartOf="@+id/viewcomdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/viewcomdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_date"
        android:textColor="#D4E157"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/textView10"
        app:layout_constraintStart_toStartOf="@+id/viewcomploc" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/complaint"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/viewcompdesp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/complaint_status"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/changestatustext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewcompdesp" />

    <TextView
        android:id="@+id/viewcompdesp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_complaint_description"
        android:textColor="#D4E157"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/viewoldcompstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/view_old_status"
        android:textColor="#D4E157"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/viewcompdesp" />

    <Button
        android:id="@+id/updatestatusbutton"
        android:layout_width="88dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/update"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/getnewstatus"
        app:layout_constraintStart_toEndOf="@+id/getnewstatus" />

    <EditText
        android:id="@+id/getnewstatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/enter_new_status"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="#131313"
        android:textColorHint="#2B2525"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/showmedia"
        app:layout_constraintEnd_toStartOf="@+id/updatestatusbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changestatustext" />

    <TextView
        android:id="@+id/changestatustext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/click_here_to_change_complaint_status"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/getnewstatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/showmedia"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/view_attachments_uploaded"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/viewimage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getnewstatus" />

    <TextView
        android:id="@+id/viewimage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/click_here_to_view_image1"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/viewimage2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showmedia" />

    <TextView
        android:id="@+id/viewimage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/click_here_to_view_image2"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/viewaudio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewimage1" />

    <TextView
        android:id="@+id/viewvideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/click_here_to_play_video"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewaudio" />

</androidx.constraintlayout.widget.ConstraintLayout>